# generic-observer

./: Cargo.toml
generic-observer-macros/: Cargo.toml
generic-observer-macros/src/: lib.rs
src/: generic_observer.rs  generic_observer_notify.rs  generic_observer_selective_notify.rs  gof_observer.rs  initial_observer.rs  main.rs  main_normal.rs
